test/e2e/base/upgrade-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-upgrade-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ha-gateway
  namespace: gateway-upgrade-infra
spec:
  gatewayClassName: upgrade
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http1
      port: 80
      protocol: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend
  namespace: gateway-upgrade-infra
spec:
  selector:
    app: infra-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend
  namespace: gateway-upgrade-infra
  labels:
    app: infra-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infra-backend
  template:
    metadata:
      labels:
        app: infra-backend
    spec:
      containers:
        - name: infra-backend
          # From https://github.com/kubernetes-sigs/gateway-api/blob/main/conformance/echo-basic/echo-basic.go
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: infra-backend
          resources:
            requests:
              cpu: 10m
